--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-		<h1>Robert is just some guy.</h1>
+		<h1>Robert is an intelligent guy that loves computers and everything to do with them. He is hoping to learn more from this BootCamp.
+		The more knowledge the better :D</h1>
 		<div class="picture">
 			<img src="robert.jpg" alt ="placeholder">
 		</div>
 		<div class="trivia">
 			<ul>
 				<li>Born in El Paso, Texas</li>
-				<li>Lived in Albuquerque, New Mexico for almost all his life</li>
-				<li>Has a BS in Computer Science</li>
+				<li>Lived in Albuquerque, New Mexico for most of his life. He likes living in Albuquerque.</li>
+				<li>Has a Bachelors Of Science in Computer Science. He is looking to get a good job and do good in life.</li>
 			</ul>
 		</div>
 	</body>
